src/index.css
* {
  font-family: "Rubik", sans-serif;
  text-decoration: none;
}

:root h1 {
  font-size: 54px;
  font-weight: 600;
  color: white;
}

:root h2 {
  font-size: 26px;
  font-weight: 600;
  color: white;
}

:root h3 {
  font-size: 20px;
  font-weight: 600;
}

:root p {
  font-size: 18px;
  font-weight: 400;
}

:root span {
  color: var(--hotpink);
}

:root {
  --lightgrey: #b0b0b0;
  --hotpink: #de1867;
  --pink2: #be2274;
  --mauve: #962b77;
  --purple1: #6e2e70;
  --purple2: #482c62;
  --indigo: #28264d;
  --darkblue: #171e25;
  --charcoal: #00070e;
}

body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: 'Rubik', sans-serif;
}


/* MENU BAR */
.menu-bar {
  height: 120px;
  width: 100vw;
  position: absolute;
  display: block;

  user-select: none;
}

.menu-bar-container {
  width: 65vw;
  max-width: 1100px;
}

.menu-links {
  position: relative;
  flex-grow: 1;
  justify-content: end;
  margin-top: 20px;
}

.nav-link {
  margin-right: 25px;
}

.nav-link h3 {
  color: white;
}

.nav-link:hover h3 {
  color: var(--lightgrey);
}

.nav-link:active h3 {
  color: var(--lightgrey);
}

.nav-button {
  margin-right: 45px; 
}

 /* HOME PAGE */

 .home-page {
  height: 100vh;
  width: 100vw;
  position: absolute;
  display: block;
 }

 .home-page-background-1 {
  padding-top: 180px;
  padding-bottom: 60px;
  height: fit-content;
  width: 100vw;
  background-image: url(../src/@types/assets/hero-blob-scene.svg);
  background-size: cover;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
 }

 .home-page-container-1 {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  width: 65vw;
  max-width: 750px;
 }

 .home-page-title {
  padding-bottom: 30px;
  color: white;
  position: relative;
  display: block;
  justify-content: center;
 }

 .home-page-subtitle {
  color: white;
  padding-bottom: 25px;
  width: 65vw;
  display: block;
  justify-content: center;
 }

 .home-page-subtitle h3 {
  color: var(--lightgrey);
 }

 .button-box {
  display: flex;
  position: relative;
  justify-content: center;
 }

 .button-col {
  display: flex;
  justify-content: center;
 }

 #btn-custom-primary {
  border-radius: 15px; 
  background-color: var(--hotpink);
  border: none;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 12px;
 }

 #btn-custom-primary:hover {
  background-color: #e792b4;
 }

 #btn-custom-primary:active {
  background-color: #e792b4;
 }

 #btn-custom-secondary {
  border-radius: 15px; 
  background-color: var(--darkblue);
  border: none;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 12px;
 }

 #btn-custom-secondary:hover {
  background-color: #728ca8;
 }

 .home-page-background-2 {
  height: fit-content;
  width: 100vw;
  background-color: var(--charcoal);
  background-size: cover;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
 }

 .home-page-container-2 {
  display: block;
  position: relative;
  align-items: center;
  padding-bottom: 100px;
  padding-top: 80px;
  color: var(--lightgrey);
  width: 80vw;
  text-align: left;
 }

 .home-page-col {
  width: 36vw;
 }

 .home-page-container-3 {
  display: block;
  position: relative;
  align-items: center;
  padding-bottom: 60px;
  color: var(--lightgrey);
  width: 68vw;
 }

 .faq-heading {
  padding-bottom: 20px;
 }

 .home-page-background-3 {
  padding-top: 60px;
  height: fit-content;
  width: 100vw;
  background-image: url(../src/@types/assets/cta-blob-scene.svg);
  background-size: cover;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
 }

 .home-page-container-4 {
  display: block;
  position: relative;
  align-items: center;
  padding-bottom: 30px;
  color: var(--lightgrey);
  width: 65vw;
  max-width: 750px;
 }

/* COMPANY PAGE */
.company-page-background {
  padding-bottom: 60px;
  height: 100vh;
  width: 100vw;
  background-image: url(../src/@types/assets/hero-blob-scene.svg);
  background-size: cover;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

.company-page-container {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  width: 65vw;
  max-width: 750px;
}

.company-button-box {
  display: flex;
  position: relative;
  justify-content: center;
 }

 .company-button-col {
  display: flex;
  justify-content: center;
 }

.email-entry {
  padding-top: 5px;
  margin-left: 20px;
  width: 300px;
}

/* ASSESSMENT PAGE */

.assessment-page-background {
  padding-bottom: 60px;
  height: 100vh;
  width: 100vw;
  background-image: url(../src/@types/assets/hero-blob-scene.svg);
  background-size: cover;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

.assessment-page-container {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  width: 65vw;
  max-width: 750px;
  top: -80px;
}


/* TASK CARD */

.task-card-container {
  display: block;
  padding: 10px;
  background-color: var(--darkblue);
  border: 2px solid var(--lightgrey);
}


 /* FONT STUFF */

 /* cyrillic-ext */
 @font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/rubik/v23/iJWKBXyIfDnIV7nMrXyw023e1Ik.woff2) format('woff2');
  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
}
/* cyrillic */
@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/rubik/v23/iJWKBXyIfDnIV7nFrXyw023e1Ik.woff2) format('woff2');
  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}
/* hebrew */
@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/rubik/v23/iJWKBXyIfDnIV7nDrXyw023e1Ik.woff2) format('woff2');
  unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
}
/* latin-ext */
@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/rubik/v23/iJWKBXyIfDnIV7nPrXyw023e1Ik.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/rubik/v23/iJWKBXyIfDnIV7nBrXyw023e.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* cyrillic-ext */
@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/rubik/v23/iJWKBXyIfDnIV7nMrXyw023e1Ik.woff2) format('woff2');
  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
}
/* cyrillic */
@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/rubik/v23/iJWKBXyIfDnIV7nFrXyw023e1Ik.woff2) format('woff2');
  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}
/* hebrew */
@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/rubik/v23/iJWKBXyIfDnIV7nDrXyw023e1Ik.woff2) format('woff2');
  unicode-range: U+0590-05FF, U+200C-2010, U+20AA, U+25CC, U+FB1D-FB4F;
}
/* latin-ext */
@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/rubik/v23/iJWKBXyIfDnIV7nPrXyw023e1Ik.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Rubik';
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/rubik/v23/iJWKBXyIfDnIV7nBrXyw023e.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

